# app/models/user.rb
@@ -3,6 +3,7 @@ class User < ApplicationRecord
 
   has_secure_password
   has_many :refresh_tokens, dependent: :destroy
+  has_many :merchants, dependent: :destroy
 
   validates :email, presence: true, uniqueness: true
   validates :name, presence: true, format: { with: /\A[\p{L}\p{M}]+(?:[\p{L}\p{M} '\-’.]*[\p{L}\p{M}])?\.?\z/u }
@@ -12,8 +13,4 @@ class User < ApplicationRecord
   # validators gem
   validates_email :email
   validates_cpf :cpf
-
-  def as_json(options = {})
-    super(options.merge(except: [ :password_digest, :created_at, :updated_at ]))
-  end
 end
