# app/serializers/merchant_serializer.rb
@@ -1,0 +1,5 @@
+class MerchantSerializer < ApplicationSerializer
+  attributes :id, :legal_name, :document, :status
+
+  one :account, resource: AccountSerializer
+end
